TBE-2559
- Fix impossibility to use variables declared inside default repeat in the repeat's subcommands

- Add logs about actual step inside repeat