@@ -15,6 +15,9 @@ import org.apache.commons.lang3.StringUtils;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
+import static java.lang.String.format;
 
 @Slf4j
 @InterpreterForClass(Repeat.class)
@@ -22,6 +25,10 @@ public class RepeatInterpreter extends AbstractInterpreter<Repeat> {
 
     private static final String COMMAND_REPEAT_FINISHED_LOG =
             LogFormat.withYellow("------- Repeat is finished -------");
+    private static final String COMMAND_REPEAT_WITH_INDEX_RUN_LOG =
+            LogFormat.withCyan("------- Repeat Run %d/%d -------");
+    private static final String COMMAND_REPEAT_WITH_VARIATION_RUN_LOG =
+            LogFormat.withCyan("------- Repeat Variation %d/%d: %s -------");
 
     private final RepeatCommandRunner repeatCommandsRunner;
     private final GlobalVariations globalVariations;
@@ -50,21 +57,26 @@ public class RepeatInterpreter extends AbstractInterpreter<Repeat> {
         log.info(LogFormat.table("Variations", repeat.getVariations()));
         result.put("Variations", repeat.getVariations());
         List<AbstractCommand> commands = repeat.getCommands();
-        List<AbstractCommand> injectedCommand = globalVariations.getVariations(repeat.getVariations()).stream()
-                .flatMap(variation -> commands.stream().map(command ->
-                        injectObjectVariation(command, variation)))
-                .toList();
-        this.repeatCommandsRunner.runCommands(injectedCommand, dependencies, result, subCommandsResult);
+        List<Map<String, String>> variations = globalVariations.getVariations(repeat.getVariations());
+        for (int i = 0; i < variations.size(); i++) {
+            Map<String, String> variationMap = variations.get(i);
+            log.info(format(COMMAND_REPEAT_WITH_VARIATION_RUN_LOG, i + 1, variations.size(), variationMap.toString()));
+            List<AbstractCommand> injectedForThisRound = commands.stream()
+                    .map(command -> injectObjectVariation(command, variationMap))
+                    .collect(Collectors.toList());
+
+            this.repeatCommandsRunner.runCommands(injectedForThisRound, dependencies, result, subCommandsResult);
+        }
     }
 
     private void runSimpleRepeat(final Repeat repeat,
                                  final CommandResult result,
                                  final List<CommandResult> subCommandsResult) {
-        Repeat repeat1 = injectCommand(repeat);
         log.info(LogFormat.table("Times", repeat.getTimes()));
         result.put("Times", repeat.getTimes());
-        for (int i = 0; i < repeat1.getTimes(); i++) {
-            this.repeatCommandsRunner.runCommands(repeat1.getCommands(), dependencies, result, subCommandsResult);
+        for (int i = 0; i < repeat.getTimes(); i++) {
+            log.info(format(COMMAND_REPEAT_WITH_INDEX_RUN_LOG, i + 1, repeat.getTimes()));
+            this.repeatCommandsRunner.runCommands(repeat.getCommands(), dependencies, result, subCommandsResult);
         }
     }
 
